# infocollect-rs

./: Cargo.toml  README.md
src/: gpu.rs  hostinfo.rs  main.rs
